2006-03-13  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview_autocomplete.c
	plugins/sourceview/sourceview_autocomplete.h
	plugins/sourceview/sourceview.c
	plugins/sourceview/sourceview-private.h
	plugins/sourceview/sourceview-prefs.c:
	
	Cleaned up and fixed several issues
	
2006-03-13  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/Makefile.am:
	plugins/sourceview/sourceview-autocomplete.c
	plugins/sourceview/sourceview-autocomplete.h:
	plugins/sourceview/sourceview-prefs.c: (sourceview_prefs_init):
	plugins/sourceview/sourceview-private.h:
	plugins/sourceview/sourceview.c:
	
	Added (buggy) autocomplete feature to sourceview
	
2006-03-12 Naba Kumar <naba@gnome.org>

	* libanjuta/anjuta-preferences.c, libanjuta/anjuta-preferences.h,
	libanjuta/anjuta-session.c: Added API docs.

2006-03-12 Naba Kumar <naba@gnome.org>

	* TODO.tasks: Added couple of tasks.
	* libanjuta/interfaces/anjuta-idl-compiler.pl: Delay type normalization,
	Register private class as early as possible so that members could
	point to self class. Code clean up.

2006-03-12 Naba Kumar <naba@gnome.org>

	* po/POTFILES.in, po/POTFILES.skip: Updated.

2006-03-11 Naba Kumar <naba@gnome.org>

	* libanjuta/anjuta-shell.c,
	plugins/document-manager/anjuta-docman.c,
	plugins/document-manager/plugin.c,
	plugins/symbol-browser/an_symbol_search.c,
	plugins/valgrind/vgrule-list.c: Use correct signal names while
	creating them.
	
	* libanjuta/interfaces/anjuta-idl-compiler.pl: Generate correct
	signal names and fixed enum IANJUTA_TYPE_* macro.

2006-03-08  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>

	* plugins/sourceview/sourceview.c, plugins/sourceview/sourceview-private.h,
	plugins/search/search-replace.c :
	Fixed bug (Bookmark the good line).
	Search & Replace (Mark all matched strings).
	
2006-03-09  Johannes Schmid <jhs@gnome.org>

	* libanjuta/anjuta-encodings.c: (anjuta_encodings_init):
	Completed changes from yesterday
	