@@ -1,3 +1,8 @@
+2006-03-14  Johannes Schmid <jhs@gnome.org>
+
+	* plugins/macro/macro-utils.c: Fixed bug #333606
+	* plugins/file-wizard/file.c: Fixed bug #333601
+
 2006-03-13  Johannes Schmid <jhs@gnome.org>
 
 	* plugins/sourceview/sourceview_autocomplete.c
